fix: 애노테이션 기반 엔티티 스캐너 테스트 케이스 수정 및 쿼리 빌더 테스트 케이스 에러 수정